--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
  <head>
-	<title>ƒpƒ`ƒ…ƒŠ -‚Ü‚Ê‚ ‚é-</title>
+	<title>ãƒ‘ãƒãƒ¥ãƒª -ã¾ã¬ã‚ã‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 <frameset cols="120,*" frameborder="0" border="0">
 <frame src="./html/menu.html" name="menuframe" scrolling="no">
 <frame src="./html/top.html" name="topframe" noresize>
 </frameset>
 <noframe>
-<a href="./html/top.html">ƒtƒŒ[ƒ€–¢‘Î‰ž‚Í‚±‚¿‚ç</a>
+<a href="./html/top.html">ãƒ•ãƒ¬ãƒ¼ãƒ æœªå¯¾å¿œã¯ã“ã¡ã‚‰</a>
 </noframe>
 </html>
 
