make things readable

--- a/html/aopchara_wriggle.html
+++ b/html/aopchara_wriggle.html
@@ -11,12 +11,13 @@ body {
 -->
 </style>
 
-	<title>ƒpƒ`ƒ…ƒŠ -‚Ü‚Ê‚ ‚é-</title>
+	<title>ãƒ‘ãƒãƒ¥ãƒª -ã¾ã¬ã‚ã‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
 
-<center><font size=6><b>@@ƒpƒ`ƒ…ƒŠ</b></font><font size="2">@@"PATCHOULI" a little war in bland-old library</font></center>
+<center><font size=6><b>ã€€ã€€ãƒ‘ãƒãƒ¥ãƒª</b></font><font size="2">ã€€ã€€"PATCHOULI" a little war in bland-old library</font></center>
 <hr>
 
 
@@ -24,69 +25,69 @@ body {
 
 <table width="400" border="0" align="center" style="font-size: 11pt">
 <tr><th bgcolor="#c0a0ff" width="400">
-ƒŠƒOƒ‹@ƒiƒCƒgƒoƒO
+ãƒªã‚°ãƒ«ã€€ãƒŠã‚¤ãƒˆãƒã‚°
 <tr>
 <td width="400px" height="380px" style="background-repeat: no-repeat; text-align: right; vertical-align: bottom" background="pl_wriggleA.jpg">
-<font size="7" color="#696969"><b>ƒŠƒOƒ‹</b></font>
+<font size="7" color="#696969"><b>ãƒªã‚°ãƒ«</b></font>
 <table border="1" style="font-size: 11pt; font-weight: bold;">
-<tr><td bgcolor="#c0c0ff">•„‚`‚P<td>ƒŠƒgƒ‹ƒoƒOi’·‰Ÿ‚µEƒ_ƒbƒVƒ…j
-<tr><td bgcolor="#c0c0ff">•„‚`‚Q<td>ƒtƒ[ƒ‰ƒVƒ‡ƒbƒgiƒ_ƒbƒVƒ…j
-<tr><td bgcolor="#c0ffc0">•„‚a‚P<td>’nã‚Ì—¬¯i’·‰Ÿ‚µj
-<tr><td bgcolor="#c0ffc0">•„‚a‚Q<td>ƒiƒCƒgƒoƒ^ƒtƒ‰ƒC
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚`<td>ƒtƒ@ƒCƒ„ƒtƒ‰ƒCƒtƒFƒmƒƒmƒ“
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚a<td>’nã‚Ìœa¯i’·‰Ÿ‚µj
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚b<td>ƒoƒ^ƒtƒ‰ƒCƒXƒg[ƒ€
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚c<td>ƒiƒCƒgƒoƒOƒgƒ‹ƒl[ƒh
-<tr><td bgcolor="#ffa0a0">‚kƒXƒyƒ‹<td>‰i–éå­‹
-<tr><td bgcolor="#ffc0ff">Œ‹ŠE<td>Œu‰Î
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼‘<td>ãƒªãƒˆãƒ«ãƒã‚°ï¼ˆé•·æŠ¼ã—ãƒ»ãƒ€ãƒƒã‚·ãƒ¥ï¼‰
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼’<td>ãƒ•ãƒ­ãƒ¼ãƒ©ã‚·ãƒ§ãƒƒãƒˆï¼ˆãƒ€ãƒƒã‚·ãƒ¥ï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼‘<td>åœ°ä¸Šã®æµæ˜Ÿï¼ˆé•·æŠ¼ã—ï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼’<td>ãƒŠã‚¤ãƒˆãƒã‚¿ãƒ•ãƒ©ã‚¤
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¡<td>ãƒ•ã‚¡ã‚¤ãƒ¤ãƒ•ãƒ©ã‚¤ãƒ•ã‚§ãƒŽãƒ¡ãƒŽãƒ³
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¢<td>åœ°ä¸Šã®å½—æ˜Ÿï¼ˆé•·æŠ¼ã—ï¼‰
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼£<td>ãƒã‚¿ãƒ•ãƒ©ã‚¤ã‚¹ãƒˆãƒ¼ãƒ 
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¤<td>ãƒŠã‚¤ãƒˆãƒã‚°ãƒˆãƒ«ãƒãƒ¼ãƒ‰
+<tr><td bgcolor="#ffa0a0">ï¼¬ã‚¹ãƒšãƒ«<td>æ°¸å¤œèŸ„å±…
+<tr><td bgcolor="#ffc0ff">çµç•Œ<td>è›ç«
 </table>
 </tr>
 <tr><td>
-’Ž‚ð‘€‚éA’Ž‚Ì‰¤B<br>
-‚ÌŠ„‚É‚ÍŽã‚¢A‚â‚ç‚ê–ðB<br>
-UŒ‚ƒ^ƒCƒ~ƒ“ƒO‚ª’x‚¢•zÎ‚«‚á‚çB<br>
-ƒ_ƒbƒVƒ…‚Å“G‚ð’e‚«”ò‚Î‚¹‚éB<br>
+è™«ã‚’æ“ã‚‹ã€è™«ã®çŽ‹ã€‚<br>
+ã®å‰²ã«ã¯å¼±ã„ã€ã‚„ã‚‰ã‚Œå½¹ã€‚<br>
+æ”»æ’ƒã‚¿ã‚¤ãƒŸãƒ³ã‚°ãŒé…ã„å¸ƒçŸ³ãã‚ƒã‚‰ã€‚<br>
+ãƒ€ãƒƒã‚·ãƒ¥ã§æ•µã‚’å¼¾ãé£›ã°ã›ã‚‹ã€‚<br>
 <br>
 <table width="400" border="1" bgcolor="#ffffff" style="font-size: 10pt">
-<tr><th colspan="3">•Šíà–¾
-<tr><td>ƒŠƒgƒ‹ƒoƒO<td>Œõ’e<td>
-ˆê’èŽžŠÔŽc‚é’ŽŒQ‚ð‘O•û‚É”­ŽË‚·‚é<br>
-’·‰Ÿ‚µ‚Å’â‘Ø‹——£‚ª•Ï‚í‚é<br>
-ƒ_ƒbƒVƒ…‚ÅƒoƒOƒXƒg[ƒ€‚É•Ï‰»<br>
-<tr><td>ƒoƒOƒXƒg[ƒ€<td>Œõ’e<td>ˆê’èŽžŠÔ‚ÌŒã‚É“G‚ð—U“±‚·‚é’Ž<br>
-<tr><td>ƒtƒ[ƒ‰ƒVƒ‡ƒbƒg<td>ŽÀ’e<td>•zÎ‚Æ‚È‚éŒu‚ðo‚·<br>
-ƒ_ƒbƒVƒ…‚Å•t‹ß‚ð’Ê‚é‚±‚Æ‚Å‹N“®‚µ<br>“G‚ð—U“±‚·‚é<br>
-ƒ_ƒbƒVƒ…‚Åƒtƒ[ƒ‰ƒVƒ…[ƒg‚É•Ï‰»<br>
-<tr><td>ƒtƒ[ƒ‰ƒVƒ…[ƒg<td>ŽÀ’e<td>•zÎ‚Æ‚È‚éŒu‚ð”­ŽË‚·‚é<br>
-ƒtƒB[ƒ‹ƒh‚Ì’[‚É‚Æ‚Ü‚é<br>
-<tr><td>’nã‚Ì—¬¯<td>ŽÀ’e<td>Ž©•ª‚ð‘ÎÛ‚Æ‚µ‚½Šµ«—U“±’ŽŒQ<br>
-’·‰Ÿ‚µ‚Å‘å‚«‚³‚Æ‘¬“x‚ª•Ï‚í‚é<br>
-<tr><td>ƒiƒCƒgƒoƒ^ƒtƒ‰ƒC<td><td>‚‚Æ‚È‚é’±‚ðo‚·<br>
-”j‰ó‚³‚ê‚éŽ–‚Å”j—ô‚µA‹ß‚­‚Ì’±‚ð—U”š‚³‚¹‚é<br>
-”j—ôi—Ó‰Îj‚ÍŽÀ’e
-<tr><td>ƒtƒ@ƒCƒ„ƒtƒ‰ƒC<br>ƒtƒFƒmƒƒmƒ“<td>Œõ’e<td>ŒuA’±‚Ì”‚¾‚¯ƒr[ƒ€‚ð”­ŽË‚·‚é<br>
-<tr><td>’nã‚Ìœa¯<td>ŽÀ’e<td>“G‚ð—U“±‚·‚é‹‘å‚ÈŒõ<br>
-’·‰Ÿ‚µ‚Å•„—Í‚ðÁ”ï‚µ‚Ä<br>‘å‚«‚³‚Æ‘¬“x‚ð•Ï‚¦‚ç‚ê‚é<br>
-<tr><td>ƒoƒ^ƒtƒ‰ƒCƒXƒg[ƒ€<td>Œõ’e<td>‘½”‚Ì’±‚ðŽT‚­<br>
-<tr><td>ƒiƒCƒgƒoƒOƒgƒ‹ƒl[ƒh<td>Œõ’e<td>ƒoƒOƒXƒg[ƒ€‚ð‘å—Ê‚É”­ŽË‚·‚é<br>
-<tr><td>‰i–éå­‹<td><td>
-’Ž‚ª‘å—Ê‚ÉoŒ»‚·‚é<br>
-”í’e–”‚ÍUŒ‚‚ð‚·‚é‚Æ‰ðœ‚³‚ê‚é
-<tr><td>Œu‰Î<td>Œõ’e<td>
-“G’e‚ð”j—ô‚³‚¹‚éB<br>
+<tr><th colspan="3">æ­¦å™¨èª¬æ˜Ž
+<tr><td>ãƒªãƒˆãƒ«ãƒã‚°<td>å…‰å¼¾<td>
+ä¸€å®šæ™‚é–“æ®‹ã‚‹è™«ç¾¤ã‚’å‰æ–¹ã«ç™ºå°„ã™ã‚‹<br>
+é•·æŠ¼ã—ã§åœæ»žè·é›¢ãŒå¤‰ã‚ã‚‹<br>
+ãƒ€ãƒƒã‚·ãƒ¥ã§ãƒã‚°ã‚¹ãƒˆãƒ¼ãƒ ã«å¤‰åŒ–<br>
+<tr><td>ãƒã‚°ã‚¹ãƒˆãƒ¼ãƒ <td>å…‰å¼¾<td>ä¸€å®šæ™‚é–“ã®å¾Œã«æ•µã‚’èª˜å°Žã™ã‚‹è™«<br>
+<tr><td>ãƒ•ãƒ­ãƒ¼ãƒ©ã‚·ãƒ§ãƒƒãƒˆ<td>å®Ÿå¼¾<td>å¸ƒçŸ³ã¨ãªã‚‹è›ã‚’å‡ºã™<br>
+ãƒ€ãƒƒã‚·ãƒ¥ã§ä»˜è¿‘ã‚’é€šã‚‹ã“ã¨ã§èµ·å‹•ã—<br>æ•µã‚’èª˜å°Žã™ã‚‹<br>
+ãƒ€ãƒƒã‚·ãƒ¥ã§ãƒ•ãƒ­ãƒ¼ãƒ©ã‚·ãƒ¥ãƒ¼ãƒˆã«å¤‰åŒ–<br>
+<tr><td>ãƒ•ãƒ­ãƒ¼ãƒ©ã‚·ãƒ¥ãƒ¼ãƒˆ<td>å®Ÿå¼¾<td>å¸ƒçŸ³ã¨ãªã‚‹è›ã‚’ç™ºå°„ã™ã‚‹<br>
+ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã®ç«¯ã«ã¨ã¾ã‚‹<br>
+<tr><td>åœ°ä¸Šã®æµæ˜Ÿ<td>å®Ÿå¼¾<td>è‡ªåˆ†ã‚’å¯¾è±¡ã¨ã—ãŸæ…£æ€§èª˜å°Žè™«ç¾¤<br>
+é•·æŠ¼ã—ã§å¤§ãã•ã¨é€Ÿåº¦ãŒå¤‰ã‚ã‚‹<br>
+<tr><td>ãƒŠã‚¤ãƒˆãƒã‚¿ãƒ•ãƒ©ã‚¤<td><td>ç›¾ã¨ãªã‚‹è¶ã‚’å‡ºã™<br>
+ç ´å£Šã•ã‚Œã‚‹äº‹ã§ç ´è£‚ã—ã€è¿‘ãã®è¶ã‚’èª˜çˆ†ã•ã›ã‚‹<br>
+ç ´è£‚ï¼ˆç‡ç«ï¼‰ã¯å®Ÿå¼¾
+<tr><td>ãƒ•ã‚¡ã‚¤ãƒ¤ãƒ•ãƒ©ã‚¤<br>ãƒ•ã‚§ãƒŽãƒ¡ãƒŽãƒ³<td>å…‰å¼¾<td>è›ã€è¶ã®æ•°ã ã‘ãƒ“ãƒ¼ãƒ ã‚’ç™ºå°„ã™ã‚‹<br>
+<tr><td>åœ°ä¸Šã®å½—æ˜Ÿ<td>å®Ÿå¼¾<td>æ•µã‚’èª˜å°Žã™ã‚‹å·¨å¤§ãªå…‰<br>
+é•·æŠ¼ã—ã§ç¬¦åŠ›ã‚’æ¶ˆè²»ã—ã¦<br>å¤§ãã•ã¨é€Ÿåº¦ã‚’å¤‰ãˆã‚‰ã‚Œã‚‹<br>
+<tr><td>ãƒã‚¿ãƒ•ãƒ©ã‚¤ã‚¹ãƒˆãƒ¼ãƒ <td>å…‰å¼¾<td>å¤šæ•°ã®è¶ã‚’æ’’ã<br>
+<tr><td>ãƒŠã‚¤ãƒˆãƒã‚°ãƒˆãƒ«ãƒãƒ¼ãƒ‰<td>å…‰å¼¾<td>ãƒã‚°ã‚¹ãƒˆãƒ¼ãƒ ã‚’å¤§é‡ã«ç™ºå°„ã™ã‚‹<br>
+<tr><td>æ°¸å¤œèŸ„å±…<td><td>
+è™«ãŒå¤§é‡ã«å‡ºç¾ã™ã‚‹<br>
+è¢«å¼¾åˆã¯æ”»æ’ƒã‚’ã™ã‚‹ã¨è§£é™¤ã•ã‚Œã‚‹
+<tr><td>è›ç«<td>å…‰å¼¾<td>
+æ•µå¼¾ã‚’ç ´è£‚ã•ã›ã‚‹ã€‚<br>
 </table>
-–ƒ_ƒbƒVƒ…Œã‚Wf“à‚É“G‚ÉG‚ê‚é‚Æ—¼ŽÒ‚ª‹t•ûŒü‚É’e‚«”ò‚Î‚³‚ê‚éB<br>
+ï¼Šãƒ€ãƒƒã‚·ãƒ¥å¾Œï¼˜få†…ã«æ•µã«è§¦ã‚Œã‚‹ã¨ä¸¡è€…ãŒé€†æ–¹å‘ã«å¼¾ãé£›ã°ã•ã‚Œã‚‹ã€‚<br>
 
 </b>
 </table>
 <br><br>
-<font size=2><center><a href="top.html">ƒgƒbƒv‚Ö</a></center></font>
+<font size=2><center><a href="top.html">ãƒˆãƒƒãƒ—ã¸</a></center></font>
 
 
 <font size=2 >
 <div align="right">
 <hr>
-ƒvƒƒOƒ‰ƒ€–{‘ÌAƒCƒ[ƒWƒf[ƒ^Aƒ}ƒjƒ…ƒAƒ‹“™‚Ì’˜ìŒ ‚Í»ìŽÒ‚j‚–‚k‚v‚É‚ ‚è‚Ü‚·B<br>
+ãƒ—ãƒ­ã‚°ãƒ©ãƒ æœ¬ä½“ã€ã‚¤ãƒ¡ãƒ¼ã‚¸ãƒ‡ãƒ¼ã‚¿ã€ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ç­‰ã®è‘—ä½œæ¨©ã¯è£½ä½œè€…ï¼«ï½–ï¼¬ï¼·ã«ã‚ã‚Šã¾ã™ã€‚<br>
 </font>
 </div>
 </font>
