--- a/html/menu.html
+++ b/html/menu.html
@@ -7,24 +7,25 @@ body {
 -->
 </style>
 
-	<title>ƒpƒ`ƒ…ƒŠ -‚Ü‚Ê‚ ‚é-</title>
+	<title>ãƒ‘ãƒãƒ¥ãƒª -ã¾ã¬ã‚ã‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
-<font size=2><center><b>ƒpƒ`ƒ…ƒŠ</b></font><br><font size="1">@@"PATCHOULI" a little war in bland-old library</font></center>
+<font size=2><center><b>ãƒ‘ãƒãƒ¥ãƒª</b></font><br><font size="1">ã€€ã€€"PATCHOULI" a little war in bland-old library</font></center>
 <font size="2">
-<center><a href="top.html" target="topframe">‚PD‚Æ‚Á‚Õ</a><br>
-<a href="story.html" target="topframe">‚QD‚Õ‚ê‚·‚Æ‚è</a><br>
-<a href="chara.html" target="topframe">‚RD‚«‚á‚ç‚­‚½[</a><br>
-<a href="controll.html" target="topframe">‚SD‘€ì•û–@</a><br>
-<a href="rule.html" target="topframe">‚TD‚µ‚·‚Ä‚Þ</a><br>
-<a href="aoprule.html" target="topframe">‚UD‚ ‚­‚¹‚é</a><br>
-<a href="title.html" target="topframe">‚VD‚½‚¢‚Æ‚é‰æ–Ê</a><br>
-<a href="view.html" target="topframe">‚WD‰æ–Êà–¾</a><br>
-<a href="config.html" target="topframe">‚XD‚±‚ñ‚Ó‚¡‚®</a><br>
-<a href="faq.html" target="topframe">‚P‚OD‚e‚`‚p</a><br><br>
+<center><a href="top.html" target="topframe">ï¼‘ï¼Žã¨ã£ã·</a><br>
+<a href="story.html" target="topframe">ï¼’ï¼Žã·ã‚Œã™ã¨ã‚Š</a><br>
+<a href="chara.html" target="topframe">ï¼“ï¼Žãã‚ƒã‚‰ããŸãƒ¼</a><br>
+<a href="controll.html" target="topframe">ï¼”ï¼Žæ“ä½œæ–¹æ³•</a><br>
+<a href="rule.html" target="topframe">ï¼•ï¼Žã—ã™ã¦ã‚€</a><br>
+<a href="aoprule.html" target="topframe">ï¼–ï¼Žã‚ãã›ã‚‹</a><br>
+<a href="title.html" target="topframe">ï¼—ï¼ŽãŸã„ã¨ã‚‹ç”»é¢</a><br>
+<a href="view.html" target="topframe">ï¼˜ï¼Žç”»é¢èª¬æ˜Ž</a><br>
+<a href="config.html" target="topframe">ï¼™ï¼Žã“ã‚“ãµãƒã</a><br>
+<a href="faq.html" target="topframe">ï¼‘ï¼ï¼Žï¼¦ï¼¡ï¼±</a><br><br>
 </center>
-<center><a href="http://otdi5.jbbs.livedoor.jp/2012831/bbs_tree" target="_top">ŒfŽ¦”Â‚Ö</a></center>
+<center><a href="http://otdi5.jbbs.livedoor.jp/2012831/bbs_tree" target="_top">æŽ²ç¤ºæ¿ã¸</a></center>
 </font>
 </body>
 </html>
