--- a/html/view.html
+++ b/html/view.html
@@ -11,24 +11,25 @@ body {
 -->
 </style>
 
-	<title>ƒpƒ`ƒ…ƒŠ -‚Ü‚Ê‚ ‚é-</title>
+	<title>ãƒ‘ãƒãƒ¥ãƒª -ã¾ã¬ã‚ã‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
 
-<center><font size=6><b>@@ƒpƒ`ƒ…ƒŠ</b></font><font size="2">@@"PATCHOULI" a little war in bland-old library</font></center>
+<center><font size=6><b>ã€€ã€€ãƒ‘ãƒãƒ¥ãƒª</b></font><font size="2">ã€€ã€€"PATCHOULI" a little war in bland-old library</font></center>
 <hr>
 
 
 
 <font size=3>
 <br><br><br>
-¡ƒXƒe[ƒW‰æ–Êà–¾<br>
+â– ã‚¹ãƒ†ãƒ¼ã‚¸ç”»é¢èª¬æ˜Ž<br>
 <br>
 <img src="view00.jpg">
 	
 <br><br><br>
-¡ƒ{ƒX‰æ–Êà–¾<br>
+â– ãƒœã‚¹ç”»é¢èª¬æ˜Ž<br>
 <br>
 <img src="view01.jpg">
 	
@@ -37,12 +38,12 @@ body {
 </font>
 
 
-<font size=2><center><a href="top.html">ƒgƒbƒv‚Ö</a></center></font>
+<font size=2><center><a href="top.html">ãƒˆãƒƒãƒ—ã¸</a></center></font>
 
 <font size=2 >
 <div align="right">
 <hr>
-ƒvƒƒOƒ‰ƒ€–{‘ÌAƒCƒ[ƒWƒf[ƒ^A‹y‚Ñƒ}ƒjƒ…ƒAƒ‹“™‚Ì’˜ìŒ ‚Í»ìŽÒ‚j‚–‚k‚v‚É‚ ‚è‚Ü‚·B<br>
+ãƒ—ãƒ­ã‚°ãƒ©ãƒ æœ¬ä½“ã€ã‚¤ãƒ¡ãƒ¼ã‚¸ãƒ‡ãƒ¼ã‚¿ã€åŠã³ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ç­‰ã®è‘—ä½œæ¨©ã¯è£½ä½œè€…ï¼«ï½–ï¼¬ï¼·ã«ã‚ã‚Šã¾ã™ã€‚<br>
 </font>
 </div>
 
