--- a/html/aopchara_kaguya.html
+++ b/html/aopchara_kaguya.html
@@ -11,12 +11,13 @@ body {
 -->
 </style>
 
-	<title>ѓpѓ`ѓ…ѓЉ -‚Ь‚К‚ ‚й-</title>
+	<title>гѓ‘гѓЃгѓҐгѓЄ -гЃѕгЃ¬гЃ‚г‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
 
-<center><font size=6><b>Ѓ@Ѓ@ѓpѓ`ѓ…ѓЉ</b></font><font size="2">Ѓ@Ѓ@"PATCHOULI" a little war in bland-old library</font></center>
+<center><font size=6><b>гЂЂгЂЂгѓ‘гѓЃгѓҐгѓЄ</b></font><font size="2">гЂЂгЂЂ"PATCHOULI" a little war in bland-old library</font></center>
 <hr>
 
 
@@ -24,81 +25,81 @@ body {
 
 <table width="400" border="0" align="center" style="font-size: 11pt">
 <tr><th bgcolor="#c0a0ff" width="400">
-–H—‰ЋRЃ@‹P–й
+и“¬иЋ±е±±гЂЂијќе¤њ
 <tr>
 <td width="400px" height="380px" style="background-repeat: no-repeat; text-align: right; vertical-align: bottom" background="pl_kaguyaA.jpg">
-<font size="7" color="#696969"><b>‹P–й</b></font>
+<font size="7" color="#696969"><b>ијќе¤њ</b></font>
 <table border="1" style="font-size: 11pt; font-weight: bold;">
-<tr><td bgcolor="#c0c0ff">•„‚`‚P<td>—ґ‚Мит‚М‹КЃi’·‰џ‚µЃ{•ыЊьѓLЃ[ЃEѓ_ѓbѓVѓ…Ѓj
-<tr><td bgcolor="#c0c0ff">•„‚`‚Q<td>•§‚МЊдђО‚М”«Ѓi’·‰џ‚µЃEѓ_ѓbѓVѓ…Ѓj
-<tr><td bgcolor="#c0ffc0">•„‚a‚P<td>ЊЋ‚МѓCѓ‹ѓЃѓiѓCѓgЃi’·‰џ‚µЃj
-<tr><td bgcolor="#c0ffc0">•„‚a‚Q<td>ѓGѓCѓWѓѓ‚МђФђОЃi’·‰џ‚µЃj
-<tr><td bgcolor="#ffa0a0">ѓXѓyѓ‹‚`<td>ѓuѓЉѓЉѓAѓ“ѓgѓhѓ‰ѓSѓ“ѓoѓЊѓbѓ^
-<tr><td bgcolor="#ffa0a0">ѓXѓyѓ‹‚a<td>ѓuѓfѓBѓXѓgѓ_ѓCѓAѓ‚ѓ“ѓhЃ•<br>ѓ‰ѓCѓtѓXѓvѓЉѓ“ѓOѓCѓ“ѓtѓBѓjѓeѓB
-<tr><td bgcolor="#ffa0a0">ѓXѓyѓ‹‚b<td>ѓTѓ‰ѓ}ѓ“ѓ_Ѓ[ѓVЃ[ѓ‹ѓh
-<tr><td bgcolor="#ffa0a0">ѓXѓyѓ‹‚c<td>–H—‰‚МЋчЉC
-<tr><td bgcolor="#ffa0a0">‚kѓXѓyѓ‹<td>‰i–й•Ф‚µ
-<tr><td bgcolor="#ffc0ff">Њ‹ЉE<td>ЌЏ•„
+<tr><td bgcolor="#c0c0ff">з¬¦пјЎпј‘<td>йѕЌгЃ®й ёгЃ®зЋ‰пј€й•·жЉјгЃ—пј‹ж–№еђ‘г‚­гѓјгѓ»гѓЂгѓѓг‚·гѓҐпј‰
+<tr><td bgcolor="#c0c0ff">з¬¦пјЎпј’<td>д»ЏгЃ®еѕЎзџігЃ®й‰ўпј€й•·жЉјгЃ—гѓ»гѓЂгѓѓг‚·гѓҐпј‰
+<tr><td bgcolor="#c0ffc0">з¬¦пјўпј‘<td>жњ€гЃ®г‚¤гѓ«гѓЎгѓЉг‚¤гѓ€пј€й•·жЉјгЃ—пј‰
+<tr><td bgcolor="#c0ffc0">з¬¦пјўпј’<td>г‚Ёг‚¤г‚ёгѓЈгЃ®иµ¤зџіпј€й•·жЉјгЃ—пј‰
+<tr><td bgcolor="#ffa0a0">г‚№гѓљгѓ«пјЎ<td>гѓ–гѓЄгѓЄг‚ўгѓігѓ€гѓ‰гѓ©г‚ґгѓігѓђгѓ¬гѓѓг‚ї
+<tr><td bgcolor="#ffa0a0">г‚№гѓљгѓ«пјў<td>гѓ–гѓ‡г‚Јг‚№гѓ€гѓЂг‚¤г‚ўгѓўгѓігѓ‰пј†<br>гѓ©г‚¤гѓ•г‚№гѓ—гѓЄгѓіг‚°г‚¤гѓігѓ•г‚Јгѓ‹гѓ†г‚Ј
+<tr><td bgcolor="#ffa0a0">г‚№гѓљгѓ«пјЈ<td>г‚µгѓ©гѓћгѓігѓЂгѓјг‚·гѓјгѓ«гѓ‰
+<tr><td bgcolor="#ffa0a0">г‚№гѓљгѓ«пј¤<td>и“¬иЋ±гЃ®жЁ№жµ·
+<tr><td bgcolor="#ffa0a0">пј¬г‚№гѓљгѓ«<td>ж°ёе¤њиї”гЃ—
+<tr><td bgcolor="#ffc0ff">зµђз•Њ<td>е€»з¬¦
 </table>
 </tr>
 <tr><td>
-ЊЋ‚©‚з—€‚ЅЊЋђlЃB‰i‰“‚Жђ{дk‚р‘Ђ‚йЃB<br>
-ЋЂ‚И‚И‚ў‚М‚ЕЃA–…Ќg‚ЖЋE‚µ‚ ‚Б‚Ѕ‚и‚µ‚Д—V‚с‚Е‚ў‚йЃB<br>
-ѓQЃ[ѓЂ’†‚Е‚Н‹@“®—Н‚Є‹Й’[‚Й’б‚ўЃB<br>
-’e–‹‚МЊъ‚і‚ЕѓJѓoЃ[‚·‚йЃB<br>
-‚Ь‚ЅЃA•у‹п‚©‚зЌUЊ‚‚·‚й‚Ѕ‚ЯЃAЌUЊ‚’†‚Е‚а“®‚Ї‚й“Б’Ґ‚Є‚ ‚йЃB<br>
+жњ€гЃ‹г‚‰жќҐгЃџжњ€дєєгЂ‚ж°ёйЃ гЃЁй €и‡ѕг‚’ж“Ќг‚‹гЂ‚<br>
+ж­»гЃЄгЃЄгЃ„гЃ®гЃ§гЂЃе¦№зґ…гЃЁж®єгЃ—гЃ‚гЃЈгЃџг‚ЉгЃ—гЃ¦йЃЉг‚“гЃ§гЃ„г‚‹гЂ‚<br>
+г‚Ігѓјгѓ дё­гЃ§гЃЇж©џе‹•еЉ›гЃЊжҐµз«ЇгЃ«дЅЋгЃ„гЂ‚<br>
+ејѕе№•гЃ®еЋљгЃ•гЃ§г‚«гѓђгѓјгЃ™г‚‹гЂ‚<br>
+гЃѕгЃџгЂЃе®ќе…·гЃ‹г‚‰ж”»ж’ѓгЃ™г‚‹гЃџг‚ЃгЂЃж”»ж’ѓдё­гЃ§г‚‚е‹•гЃ‘г‚‹з‰№еѕґгЃЊгЃ‚г‚‹гЂ‚<br>
 <br>
 <table width="400" border="1" bgcolor="#ffffff" style="font-size: 10pt">
-<tr><th colspan="3">•ђЉнђа–ѕ
-<tr><td>—ґ‚Мит‚М‹К<td>Њх’e<td>
-’·‰џ‚µ‚µ‚И‚Є‚з•ыЊьѓLЃ[‚р“ь—Н‚·‚йЋ–‚Е<br>
-”C€У‚М•ыЊь‚Й”т‚О‚·‚±‚Ж‚ЄЏo—€‚й<br>
-ѓ_ѓbѓVѓ…’†‚Й“ь—Н‚Е–H—‰‚М‹К‚МЋ}‚Й•П‰»<br>
-<tr><td>–H—‰‚М‹К‚МЋ}<td>Њх’e<td>
-ѓtѓBЃ[ѓ‹ѓh’[‚Й“–‚Ѕ‚й‚Ж“G‘_‚ў‚Е’µ‚Л•Ф‚й<br>
-ѓ_ѓbѓVѓ…‚ЕЏБ‚№‚й
-<tr><td>•§‚МЊдђО‚М”«<td>ЋА’e<td>“G‘_‚ў‚МѓrЃ[ѓЂЃB€Р—Н‚Н’б‚ў<br>
-’·‰џ‚µ‚Е‰Ќ‚МЋq€АЉL‚Й•П‰»<br>
-ѓ_ѓbѓVѓ…’†‚Й“ь—Н‚Е‰О‘l‚М”з€Я‚Й•П‰»<br>
-<tr><td>‰Ќ‚МЋq€АЉL<td>ЋА’e<td>‘S•ы€К‚МѓrЃ[ѓЂ<br>
-<tr><td>‰О‘l‚М”з€Я<td>ЋА’e<td>‚µ‚О‚з‚­’в‘Ш‚·‚йЋА’e<br>
-<tr><td>ЊЋ‚МѓCѓ‹ѓЃѓiѓCѓg<td>Њх’e<td>“G‘_‚ў‚МЋU’eЃBѓ_ѓbѓVѓ…‚ЕЏБ‚№‚й<br>
-“–‚Ѕ‚й‚ЖЌЏ•„‚рЏo‚·<br>
-’·‰џ‚µ‚Еѓ~ѓXѓeѓЉѓEѓЂ‚Й•П‰»
-<tr><td>ѓ~ѓXѓeѓЉѓEѓЂ<td>Њх’e<td>‘S•ы€К‚МЋU’e<br>
-“–‚Ѕ‚й‚ЖЌЏ•„‚рЏo‚·<br>
-<tr><td>ѓGѓCѓWѓѓ‚МђФђО<td>ЋА’e<td>’ґЌ‚‘¬’e<br>
-’·‰џ‚µ‚Е‹аЉtЋ›‚М€к–‡“V€д‚Й•П‰»
-<tr><td>‹аЉtЋ›‚М€к–‡“V€д<td>ЋА’e<td>•З‚р’Ј‚й<br>
-<tr><td>ѓuѓЉѓЉѓAѓ“ѓgѓhѓ‰ѓSѓ“<br>ѓoѓЊѓbѓ^<td>ЋА’e<td>
-•ыЊьѓLЃ[‚Е”C€У‚М•ыЊь‚Й”т‚О‚·‚±‚Ж‚ЄЏo—€‚й
-<tr><td>ѓuѓfѓBѓXѓg<br>ѓ_ѓCѓAѓ‚ѓ“ѓhЃ•<br>ѓ‰ѓCѓtѓXѓvѓЉѓ“ѓO<br>ѓCѓ“ѓtѓBѓjѓeѓB<td>ЋА’e<td>ЌL”Н€Н‚ЙѓrЃ[ѓЂ‚р•ъ‚В<br>
-<tr><td>ѓTѓ‰ѓ}ѓ“ѓ_Ѓ[<br>ѓVЃ[ѓ‹ѓh<td>ЋА’e<td>‰Љ‚ЖѓrЃ[ѓЂ‚рЏo‚·<br>
-“G’e‚р–h‚®ѓVЃ[ѓ‹ѓh‚ЄђЭ’u‚і‚к‚й
-<tr><td>–H—‰‚МЋчЉC<td>Њх’e<td>
-ѓtѓBЃ[ѓ‹ѓh’[‚Е“G‘_‚ў‚Й•П‰»‚·‚й’e<br>‚р”­ЋЛ‚·‚й–‚•ыђw‚рђЭ’u‚·‚й<br>
-<tr><td>‰i–й•Ф‚µ<td>ЋА’e<td>’e–‹ЌUЊ‚<br>
-“ь—Н‚·‚йѓLЃ[‚Й‰ћ‚¶‚Д•П‰»‚·‚й<br>
-•„‚`‚PЃF‰i–й•Ф‚µЃ@Ѓ|ЊЋЃ|<br>
-•„‚`‚QЃF‰i–й•Ф‚µЃ@Ѓ|ЋqЃ|<br>
-•„‚a‚PЃF‰i–й•Ф‚µЃ@Ѓ|“РЃ|<br>
-•„‚a‚QЃF‰i–й•Ф‚µЃ@Ѓ|‰NЃ|<br>
-“ь—Н–і‚µЃF‰i–й•Ф‚µЃ@Ѓ|–ѕЃ|<br>
-“–‚Ѕ‚й‚ЖЌЏ•„‚рЏo‚·
-<tr><td>ЌЏ•„<td><td>Ћ©•Є‚М€Ъ“®—Н‚ЄЏг‚Є‚й<br>
+<tr><th colspan="3">ж­¦е™ЁиЄ¬жЋ
+<tr><td>йѕЌгЃ®й ёгЃ®зЋ‰<td>е…‰ејѕ<td>
+й•·жЉјгЃ—гЃ—гЃЄгЃЊг‚‰ж–№еђ‘г‚­гѓјг‚’е…ҐеЉ›гЃ™г‚‹дє‹гЃ§<br>
+д»»ж„ЏгЃ®ж–№еђ‘гЃ«йЈ›гЃ°гЃ™гЃ“гЃЁгЃЊе‡єжќҐг‚‹<br>
+гѓЂгѓѓг‚·гѓҐдё­гЃ«е…ҐеЉ›гЃ§и“¬иЋ±гЃ®зЋ‰гЃ®жћќгЃ«е¤‰еЊ–<br>
+<tr><td>и“¬иЋ±гЃ®зЋ‰гЃ®жћќ<td>е…‰ејѕ<td>
+гѓ•г‚Јгѓјгѓ«гѓ‰з«ЇгЃ«еЅ“гЃџг‚‹гЃЁж•µз‹™гЃ„гЃ§и·ігЃ­иї”г‚‹<br>
+гѓЂгѓѓг‚·гѓҐгЃ§ж¶€гЃ›г‚‹
+<tr><td>д»ЏгЃ®еѕЎзџігЃ®й‰ў<td>е®џејѕ<td>ж•µз‹™гЃ„гЃ®гѓ“гѓјгѓ гЂ‚еЁЃеЉ›гЃЇдЅЋгЃ„<br>
+й•·жЉјгЃ—гЃ§з‡•гЃ®е­ђе®‰иІќгЃ«е¤‰еЊ–<br>
+гѓЂгѓѓг‚·гѓҐдё­гЃ«е…ҐеЉ›гЃ§зЃ«йј гЃ®зљ®иЎЈгЃ«е¤‰еЊ–<br>
+<tr><td>з‡•гЃ®е­ђе®‰иІќ<td>е®џејѕ<td>е…Ёж–№дЅЌгЃ®гѓ“гѓјгѓ <br>
+<tr><td>зЃ«йј гЃ®зљ®иЎЈ<td>е®џејѕ<td>гЃ—гЃ°г‚‰гЃЏеЃњж»ћгЃ™г‚‹е®џејѕ<br>
+<tr><td>жњ€гЃ®г‚¤гѓ«гѓЎгѓЉг‚¤гѓ€<td>е…‰ејѕ<td>ж•µз‹™гЃ„гЃ®ж•ЈејѕгЂ‚гѓЂгѓѓг‚·гѓҐгЃ§ж¶€гЃ›г‚‹<br>
+еЅ“гЃџг‚‹гЃЁе€»з¬¦г‚’е‡єгЃ™<br>
+й•·жЉјгЃ—гЃ§гѓџг‚№гѓ†гѓЄг‚¦гѓ гЃ«е¤‰еЊ–
+<tr><td>гѓџг‚№гѓ†гѓЄг‚¦гѓ <td>е…‰ејѕ<td>е…Ёж–№дЅЌгЃ®ж•Јејѕ<br>
+еЅ“гЃџг‚‹гЃЁе€»з¬¦г‚’е‡єгЃ™<br>
+<tr><td>г‚Ёг‚¤г‚ёгѓЈгЃ®иµ¤зџі<td>е®џејѕ<td>и¶…й«йЂџејѕ<br>
+й•·жЉјгЃ—гЃ§й‡‘й–ЈеЇєгЃ®дёЂжћље¤©дє•гЃ«е¤‰еЊ–
+<tr><td>й‡‘й–ЈеЇєгЃ®дёЂжћље¤©дє•<td>е®џејѕ<td>еЈЃг‚’ејµг‚‹<br>
+<tr><td>гѓ–гѓЄгѓЄг‚ўгѓігѓ€гѓ‰гѓ©г‚ґгѓі<br>гѓђгѓ¬гѓѓг‚ї<td>е®џејѕ<td>
+ж–№еђ‘г‚­гѓјгЃ§д»»ж„ЏгЃ®ж–№еђ‘гЃ«йЈ›гЃ°гЃ™гЃ“гЃЁгЃЊе‡єжќҐг‚‹
+<tr><td>гѓ–гѓ‡г‚Јг‚№гѓ€<br>гѓЂг‚¤г‚ўгѓўгѓігѓ‰пј†<br>гѓ©г‚¤гѓ•г‚№гѓ—гѓЄгѓіг‚°<br>г‚¤гѓігѓ•г‚Јгѓ‹гѓ†г‚Ј<td>е®џејѕ<td>еєѓзЇ„е›ІгЃ«гѓ“гѓјгѓ г‚’ж”ѕгЃ¤<br>
+<tr><td>г‚µгѓ©гѓћгѓігѓЂгѓј<br>г‚·гѓјгѓ«гѓ‰<td>е®џејѕ<td>з‚ЋгЃЁгѓ“гѓјгѓ г‚’е‡єгЃ™<br>
+ж•µејѕг‚’йІгЃђг‚·гѓјгѓ«гѓ‰гЃЊиЁ­зЅ®гЃ•г‚Њг‚‹
+<tr><td>и“¬иЋ±гЃ®жЁ№жµ·<td>е…‰ејѕ<td>
+гѓ•г‚Јгѓјгѓ«гѓ‰з«ЇгЃ§ж•µз‹™гЃ„гЃ«е¤‰еЊ–гЃ™г‚‹ејѕ<br>г‚’з™єе°„гЃ™г‚‹й­”ж–№й™Јг‚’иЁ­зЅ®гЃ™г‚‹<br>
+<tr><td>ж°ёе¤њиї”гЃ—<td>е®џејѕ<td>ејѕе№•ж”»ж’ѓ<br>
+е…ҐеЉ›гЃ™г‚‹г‚­гѓјгЃ«еїњгЃгЃ¦е¤‰еЊ–гЃ™г‚‹<br>
+з¬¦пјЎпј‘пјљж°ёе¤њиї”гЃ—гЂЂпјЌжњ€пјЌ<br>
+з¬¦пјЎпј’пјљж°ёе¤њиї”гЃ—гЂЂпјЌе­ђпјЌ<br>
+з¬¦пјўпј‘пјљж°ёе¤њиї”гЃ—гЂЂпјЌеЇ…пјЌ<br>
+з¬¦пјўпј’пјљж°ёе¤њиї”гЃ—гЂЂпјЌдё‘пјЌ<br>
+е…ҐеЉ›з„ЎгЃ—пјљж°ёе¤њиї”гЃ—гЂЂпјЌжЋпјЌ<br>
+еЅ“гЃџг‚‹гЃЁе€»з¬¦г‚’е‡єгЃ™
+<tr><td>е€»з¬¦<td><td>и‡Єе€†гЃ®з§»е‹•еЉ›гЃЊдёЉгЃЊг‚‹<br>
 </table>
-Ѓ–ЌЏ•„‚ЕЏг‚Є‚й‚М‚Н€Ъ“®‘¬“x‚М‚ЭЃBѓ_ѓbѓVѓ…‘¬“x‚Н•П‰»‚µ‚И‚ўЃB<br>
+пјЉе€»з¬¦гЃ§дёЉгЃЊг‚‹гЃ®гЃЇз§»е‹•йЂџеє¦гЃ®гЃїгЂ‚гѓЂгѓѓг‚·гѓҐйЂџеє¦гЃЇе¤‰еЊ–гЃ—гЃЄгЃ„гЂ‚<br>
 
 </b>
 </table>
 <br><br>
-<font size=2><center><a href="top.html">ѓgѓbѓv‚Ц</a></center></font>
+<font size=2><center><a href="top.html">гѓ€гѓѓгѓ—гЃё</a></center></font>
 
 
 <font size=2 >
 <div align="right">
 <hr>
-ѓvѓЌѓOѓ‰ѓЂ–{‘МЃAѓCѓЃЃ[ѓWѓfЃ[ѓ^ЃAѓ}ѓjѓ…ѓAѓ‹“™‚М’ЌмЊ ‚Нђ»ЌмЋТ‚j‚–‚k‚v‚Й‚ ‚и‚Ь‚·ЃB<br>
+гѓ—гѓ­г‚°гѓ©гѓ жњ¬дЅ“гЂЃг‚¤гѓЎгѓјг‚ёгѓ‡гѓјг‚їгЂЃгѓћгѓ‹гѓҐг‚ўгѓ«з­‰гЃ®и‘—дЅњжЁ©гЃЇиЈЅдЅњиЂ…пј«пЅ–пј¬пј·гЃ«гЃ‚г‚ЉгЃѕгЃ™гЂ‚<br>
 </font>
 </div>
 </font>
