--- a/html/aopchara_koakuma.html
+++ b/html/aopchara_koakuma.html
@@ -11,12 +11,13 @@ body {
 -->
 </style>
 
-	<title>ƒpƒ`ƒ…ƒŠ -‚Ü‚Ê‚ ‚é-</title>
+	<title>ãƒ‘ãƒãƒ¥ãƒª -ã¾ã¬ã‚ã‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
 
-<center><font size=6><b>@@ƒpƒ`ƒ…ƒŠ</b></font><font size="2">@@"PATCHOULI" a little war in bland-old library</font></center>
+<center><font size=6><b>ã€€ã€€ãƒ‘ãƒãƒ¥ãƒª</b></font><font size="2">ã€€ã€€"PATCHOULI" a little war in bland-old library</font></center>
 <hr>
 
 
@@ -24,77 +25,77 @@ body {
 
 <table border=0 align="center" style="font-size: 11pt">
 <tr><th bgcolor="#ffa0a0" width="400">
-¬ˆ«–‚
+å°æ‚ªé­”
 <tr>
 <td width="400px" height="380px" style="background-repeat: no-repeat; text-align: right; vertical-align: bottom" background="pl_koakumaA.jpg">
-<font size="7" color="#696969"><b>¬ˆ«–‚</b></font>
+<font size="7" color="#696969"><b>å°æ‚ªé­”</b></font>
 <table border="1" style="font-size: 11pt; font-weight: bold;">
-<tr><td bgcolor="#c0c0ff">•„‚`‚P<td>ƒp[ƒeƒBƒNƒ‹ƒ~ƒXƒ`[ƒti’·‰Ÿ‚µEƒ_ƒbƒVƒ…j
-<tr><td bgcolor="#c0c0ff">•„‚`‚Q<td>ƒJƒmƒ“ƒJƒ‹ƒeƒbƒgi•ûŒüƒL[E’·‰Ÿ‚µEƒ_ƒbƒVƒ…j
-<tr><td bgcolor="#c0ffc0">•„‚a‚P<td>ƒŒ[ƒ‹ƒ‰ƒCƒuƒ‰ƒŠƒAƒ“i–‚•ûw‚È‚µj
-<tr><td bgcolor="#c0ffc0">•„‚a‚Q<td>ƒCƒ“ƒrƒVƒuƒ‹ƒXƒtƒBƒAi–‚•ûw‚È‚µj
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚`<td>ƒZƒ‰ƒtƒBƒbƒNƒuƒŒƒXi–‚•ûw‚È‚µE‹¤—Lj
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚a<td>ƒuƒ‰ƒbƒhEƒŠƒgƒ‹
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚b<td>‚lEƒI[ƒPƒXƒgƒ‰i–‚•ûw‚È‚µj
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚c<td>ƒZƒ‰ƒtƒBƒbƒNƒuƒŒƒCƒYi–‚•ûw‚È‚µE‹¤—Lj
-<tr><td bgcolor="#ffa0a0">‚kƒXƒyƒ‹<td>‘Â“VŽg@You don't seem ...i‹¤—Lj
-<tr><td bgcolor="#ffc0ff">Œ‹ŠE<td>ƒŠƒo[ƒXƒ~ƒXƒ`[ƒt
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼‘<td>ãƒ‘ãƒ¼ãƒ†ã‚£ã‚¯ãƒ«ãƒŸã‚¹ãƒãƒ¼ãƒ•ï¼ˆé•·æŠ¼ã—ãƒ»ãƒ€ãƒƒã‚·ãƒ¥ï¼‰
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼’<td>ã‚«ãƒŽãƒ³ã‚«ãƒ«ãƒ†ãƒƒãƒˆï¼ˆæ–¹å‘ã‚­ãƒ¼ãƒ»é•·æŠ¼ã—ãƒ»ãƒ€ãƒƒã‚·ãƒ¥ï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼‘<td>ãƒ¬ãƒ¼ãƒ«ãƒ©ã‚¤ãƒ–ãƒ©ãƒªã‚¢ãƒ³ï¼ˆé­”æ–¹é™£ãªã—ï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼’<td>ã‚¤ãƒ³ãƒ“ã‚·ãƒ–ãƒ«ã‚¹ãƒ•ã‚£ã‚¢ï¼ˆé­”æ–¹é™£ãªã—ï¼‰
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¡<td>ã‚»ãƒ©ãƒ•ã‚£ãƒƒã‚¯ãƒ–ãƒ¬ã‚¹ï¼ˆé­”æ–¹é™£ãªã—ãƒ»å…±æœ‰ï¼‰
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¢<td>ãƒ–ãƒ©ãƒƒãƒ‰ãƒ»ãƒªãƒˆãƒ«
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼£<td>ï¼­ãƒ»ã‚ªãƒ¼ã‚±ã‚¹ãƒˆãƒ©ï¼ˆé­”æ–¹é™£ãªã—ï¼‰
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¤<td>ã‚»ãƒ©ãƒ•ã‚£ãƒƒã‚¯ãƒ–ãƒ¬ã‚¤ã‚ºï¼ˆé­”æ–¹é™£ãªã—ãƒ»å…±æœ‰ï¼‰
+<tr><td bgcolor="#ffa0a0">ï¼¬ã‚¹ãƒšãƒ«<td>å •å¤©ä½¿ã€€You don't seem ...ï¼ˆå…±æœ‰ï¼‰
+<tr><td bgcolor="#ffc0ff">çµç•Œ<td>ãƒªãƒãƒ¼ã‚¹ãƒŸã‚¹ãƒãƒ¼ãƒ•
 </table>
 </tr>
 <tr><td>
-ƒpƒ`ƒ…ƒŠ[‚Ì‘Ö‚ÉZ‚ÞA—Í‚ÌŽã‚¢ˆ«–‚B<br>
-–‚•ûw‚ð‹ìŽg‚µ‚Äí‚¤B<br>
-¬ˆ«–‚“¯Žm‚Å‘g‚Þ‚ÆA­‚µ‹­‚¢B<br>
+ãƒ‘ãƒãƒ¥ãƒªãƒ¼ã®æ›¸æ–Žã«ä½ã‚€ã€åŠ›ã®å¼±ã„æ‚ªé­”ã€‚<br>
+é­”æ–¹é™£ã‚’é§†ä½¿ã—ã¦æˆ¦ã†ã€‚<br>
+å°æ‚ªé­”åŒå£«ã§çµ„ã‚€ã¨ã€å°‘ã—å¼·ã„ã€‚<br>
 <br>
 <table width="400" border="1" bgcolor="#ffffff" style="font-size: 10pt">
-<tr><th colspan="3">•Šíà–¾
-<tr><td>ƒp[ƒeƒBƒNƒ‹‚l<td>Œõ’e<td>’·‰Ÿ‚µ‚ÅŽO˜A”­‚Ü‚Å<br>
-ƒ_ƒbƒVƒ…’†‚É“ü—Í‚·‚é‚±‚Æ‚Å<br>ƒ‚ƒŒƒLƒ…[ƒ‹ƒ~ƒXƒ`[ƒt‚É•Ï‰»<br>
-ˆê’èŽžŠÔ‚Å–‚•ûw‚É•Ï‰»
-<tr><td>ƒ‚ƒŒƒLƒ…[ƒ‹‚l<td>Œõ’e<td>“G‘_‚¢’e<br>
-ˆê’èŽžŠÔ‚Å–‚•ûw‚É•Ï‰»
-<tr><td>ƒJƒmƒ“ƒJƒ‹ƒeƒbƒg<td>ŽÀ’e<td>’·‰Ÿ‚µ‚ÅŽO˜A”­‚Ü‚Å<br>
-•ûŒüƒL[‚ÅŽËŒ‚•ûŒü•Ï‰»<br>
-ƒ_ƒbƒVƒ…’†‚É“ü—Í‚·‚é‚±‚Æ‚Å<br>ƒtƒ@ƒEƒXƒgƒJƒ‹ƒeƒbƒg‚É•Ï‰»<br>
-”j‰ó‚³‚ê‚é‚±‚Æ‚Å–‚•ûw‚É•Ï‰»
-<tr><td>ƒtƒ@ƒEƒXƒgƒJƒ‹ƒeƒbƒg<td>ŽÀ’e<td>’·‰Ÿ‚µ‚ÅŽO˜A”­‚Ü‚Å<br>
-•ûŒüƒL[‚ÅŽËŒ‚•ûŒü•Ï‰»<br>
-”j‰ó‚³‚ê‚é‚±‚Æ‚Å–‚•ûw‚É•Ï‰»
-<tr><td>ƒŒ[ƒ‹ƒ‰ƒCƒuƒ‰ƒŠƒAƒ“<td>Œõ’e<td>Å‚à‹ß‚¢–‚•ûw‚©‚çƒr[ƒ€‚ð”­ŽË<br>
-–‚•ûw‚ª–³‚¢ê‡ƒXƒ^ƒ“ƒhƒ~ƒXƒ`[ƒt‚ðŽg—p
-<tr><td>ƒCƒ“ƒrƒVƒuƒ‹ƒXƒtƒBƒA<td>ŽÀ’e<td>“G‚ÉÅ‚à‹ß‚¢–‚•ûw‚Éƒ[ƒvUŒ‚<br>
-–‚•ûw‚ª–³‚¢ê‡ƒXƒ^ƒ“ƒhƒ~ƒXƒ`[ƒt‚ðŽg—p
-<tr><td>ƒXƒ^ƒ“ƒhƒ~ƒXƒ`[ƒt<td><td>–‚•ûwÝ’u
-<tr><td>ƒZƒ‰ƒtƒBƒbƒNƒuƒŒƒX<td>ŽÀ’e<td>–‚•ûw‚©‚ç‚o—ÍƒŒ[ƒU[‚ð”­ŽË<br>
-–‚•ûw‚ª–³‚¢ê‡ƒ‰ƒEƒ“ƒhƒ~ƒXƒ`[ƒt‚ðŽg—p
-<tr><td>ƒ‰ƒEƒ“ƒhƒ~ƒXƒ`[ƒt<td><td>ƒtƒB[ƒ‹ƒh‚Ì‰~Žüã‚É–‚•ûw‚ðÝ’u<br>
-<tr><td>ƒuƒ‰ƒbƒhEƒŠƒgƒ‹<td>ŽÀ’e<td>’¼üØ‚è<br>
-“G‚Ì‘Ì—Í‚ð‹z‚¢Žæ‚é
-<tr><td>‚lEƒI[ƒPƒXƒgƒ‰<td>Œõ’e<td>–‚•ûw•t‹ß‚ðUŒ‚‚·‚é<br>
-–‚•ûw‚ª–³‚¢ê‡ƒ‰ƒ“ƒfƒu[ƒ~ƒXƒ`[ƒt<br>‚ðŽg—p
-<tr><td>ƒ‰ƒ“ƒfƒu[ƒ~ƒXƒ`[ƒt<td><td>Ž©•ª‚É‚Â‚¢‚Ä‚­‚é–‚•ûw‚ðÝ’u
-<tr><td>ƒZƒ‰ƒtƒBƒbƒNƒuƒŒƒCƒY<td>ŽÀ’e<td>–‚•ûw‚©‚çŽ©•ª•ûŒü‚É<br>
-‚o—ÍƒŒ[ƒU[‚ð”­ŽËB‹¤—LB<br>
-–‚•ûw‚ª–³‚¢ê‡ƒ}ƒXƒ~ƒXƒ`[ƒt‚ðŽg—p
-<tr><td>ƒ}ƒXƒ~ƒXƒ`[ƒt<td><td>–‚•ûw‚ðd‚Ë‚ÄÝ’u
-<tr><td>‘Â“VŽg<td>ŽÀ’e<td>’¼üØ‚è<br>
-‰Œ‚‚ª“–‚½‚ê‚ÎA‚»‚ÌŒã<br>–‚•ûw‚©‚ç‚o—ÍƒŒ[ƒU[‚ð”­ŽË<br>
-“G‚Ì‘Ì—Í‚ð‹z‚¢Žæ‚é
-<tr><td>ƒŠƒo[ƒXƒ~ƒXƒ`[ƒt<td><td>Šm—¦‚Å–‚•ûw‚É•Ï‰»‚³‚¹‚é
+<tr><th colspan="3">æ­¦å™¨èª¬æ˜Ž
+<tr><td>ãƒ‘ãƒ¼ãƒ†ã‚£ã‚¯ãƒ«ï¼­<td>å…‰å¼¾<td>é•·æŠ¼ã—ã§ä¸‰é€£ç™ºã¾ã§<br>
+ãƒ€ãƒƒã‚·ãƒ¥ä¸­ã«å…¥åŠ›ã™ã‚‹ã“ã¨ã§<br>ãƒ¢ãƒ¬ã‚­ãƒ¥ãƒ¼ãƒ«ãƒŸã‚¹ãƒãƒ¼ãƒ•ã«å¤‰åŒ–<br>
+ä¸€å®šæ™‚é–“ã§é­”æ–¹é™£ã«å¤‰åŒ–
+<tr><td>ãƒ¢ãƒ¬ã‚­ãƒ¥ãƒ¼ãƒ«ï¼­<td>å…‰å¼¾<td>æ•µç‹™ã„å¼¾<br>
+ä¸€å®šæ™‚é–“ã§é­”æ–¹é™£ã«å¤‰åŒ–
+<tr><td>ã‚«ãƒŽãƒ³ã‚«ãƒ«ãƒ†ãƒƒãƒˆ<td>å®Ÿå¼¾<td>é•·æŠ¼ã—ã§ä¸‰é€£ç™ºã¾ã§<br>
+æ–¹å‘ã‚­ãƒ¼ã§å°„æ’ƒæ–¹å‘å¤‰åŒ–<br>
+ãƒ€ãƒƒã‚·ãƒ¥ä¸­ã«å…¥åŠ›ã™ã‚‹ã“ã¨ã§<br>ãƒ•ã‚¡ã‚¦ã‚¹ãƒˆã‚«ãƒ«ãƒ†ãƒƒãƒˆã«å¤‰åŒ–<br>
+ç ´å£Šã•ã‚Œã‚‹ã“ã¨ã§é­”æ–¹é™£ã«å¤‰åŒ–
+<tr><td>ãƒ•ã‚¡ã‚¦ã‚¹ãƒˆã‚«ãƒ«ãƒ†ãƒƒãƒˆ<td>å®Ÿå¼¾<td>é•·æŠ¼ã—ã§ä¸‰é€£ç™ºã¾ã§<br>
+æ–¹å‘ã‚­ãƒ¼ã§å°„æ’ƒæ–¹å‘å¤‰åŒ–<br>
+ç ´å£Šã•ã‚Œã‚‹ã“ã¨ã§é­”æ–¹é™£ã«å¤‰åŒ–
+<tr><td>ãƒ¬ãƒ¼ãƒ«ãƒ©ã‚¤ãƒ–ãƒ©ãƒªã‚¢ãƒ³<td>å…‰å¼¾<td>æœ€ã‚‚è¿‘ã„é­”æ–¹é™£ã‹ã‚‰ãƒ“ãƒ¼ãƒ ã‚’ç™ºå°„<br>
+é­”æ–¹é™£ãŒç„¡ã„å ´åˆã‚¹ã‚¿ãƒ³ãƒ‰ãƒŸã‚¹ãƒãƒ¼ãƒ•ã‚’ä½¿ç”¨
+<tr><td>ã‚¤ãƒ³ãƒ“ã‚·ãƒ–ãƒ«ã‚¹ãƒ•ã‚£ã‚¢<td>å®Ÿå¼¾<td>æ•µã«æœ€ã‚‚è¿‘ã„é­”æ–¹é™£ã«ãƒ¯ãƒ¼ãƒ—æ”»æ’ƒ<br>
+é­”æ–¹é™£ãŒç„¡ã„å ´åˆã‚¹ã‚¿ãƒ³ãƒ‰ãƒŸã‚¹ãƒãƒ¼ãƒ•ã‚’ä½¿ç”¨
+<tr><td>ã‚¹ã‚¿ãƒ³ãƒ‰ãƒŸã‚¹ãƒãƒ¼ãƒ•<td><td>é­”æ–¹é™£è¨­ç½®
+<tr><td>ã‚»ãƒ©ãƒ•ã‚£ãƒƒã‚¯ãƒ–ãƒ¬ã‚¹<td>å®Ÿå¼¾<td>é­”æ–¹é™£ã‹ã‚‰é«˜å‡ºåŠ›ãƒ¬ãƒ¼ã‚¶ãƒ¼ã‚’ç™ºå°„<br>
+é­”æ–¹é™£ãŒç„¡ã„å ´åˆãƒ©ã‚¦ãƒ³ãƒ‰ãƒŸã‚¹ãƒãƒ¼ãƒ•ã‚’ä½¿ç”¨
+<tr><td>ãƒ©ã‚¦ãƒ³ãƒ‰ãƒŸã‚¹ãƒãƒ¼ãƒ•<td><td>ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã®å††å‘¨ä¸Šã«é­”æ–¹é™£ã‚’è¨­ç½®<br>
+<tr><td>ãƒ–ãƒ©ãƒƒãƒ‰ãƒ»ãƒªãƒˆãƒ«<td>å®Ÿå¼¾<td>ç›´ç·šåˆ‡ã‚Š<br>
+æ•µã®ä½“åŠ›ã‚’å¸ã„å–ã‚‹
+<tr><td>ï¼­ãƒ»ã‚ªãƒ¼ã‚±ã‚¹ãƒˆãƒ©<td>å…‰å¼¾<td>é­”æ–¹é™£ä»˜è¿‘ã‚’æ”»æ’ƒã™ã‚‹<br>
+é­”æ–¹é™£ãŒç„¡ã„å ´åˆãƒ©ãƒ³ãƒ‡ãƒ–ãƒ¼ãƒŸã‚¹ãƒãƒ¼ãƒ•<br>ã‚’ä½¿ç”¨
+<tr><td>ãƒ©ãƒ³ãƒ‡ãƒ–ãƒ¼ãƒŸã‚¹ãƒãƒ¼ãƒ•<td><td>è‡ªåˆ†ã«ã¤ã„ã¦ãã‚‹é­”æ–¹é™£ã‚’è¨­ç½®
+<tr><td>ã‚»ãƒ©ãƒ•ã‚£ãƒƒã‚¯ãƒ–ãƒ¬ã‚¤ã‚º<td>å®Ÿå¼¾<td>é­”æ–¹é™£ã‹ã‚‰è‡ªåˆ†æ–¹å‘ã«<br>
+é«˜å‡ºåŠ›ãƒ¬ãƒ¼ã‚¶ãƒ¼ã‚’ç™ºå°„ã€‚å…±æœ‰ã€‚<br>
+é­”æ–¹é™£ãŒç„¡ã„å ´åˆãƒžã‚¹ãƒŸã‚¹ãƒãƒ¼ãƒ•ã‚’ä½¿ç”¨
+<tr><td>ãƒžã‚¹ãƒŸã‚¹ãƒãƒ¼ãƒ•<td><td>é­”æ–¹é™£ã‚’é‡ã­ã¦è¨­ç½®
+<tr><td>å •å¤©ä½¿<td>å®Ÿå¼¾<td>ç›´ç·šåˆ‡ã‚Š<br>
+åˆæ’ƒãŒå½“ãŸã‚Œã°ã€ãã®å¾Œ<br>é­”æ–¹é™£ã‹ã‚‰é«˜å‡ºåŠ›ãƒ¬ãƒ¼ã‚¶ãƒ¼ã‚’ç™ºå°„<br>
+æ•µã®ä½“åŠ›ã‚’å¸ã„å–ã‚‹
+<tr><td>ãƒªãƒãƒ¼ã‚¹ãƒŸã‚¹ãƒãƒ¼ãƒ•<td><td>ç¢ºçŽ‡ã§é­”æ–¹é™£ã«å¤‰åŒ–ã•ã›ã‚‹
 </table>
-–‹¤—L‚Íƒ`[ƒ€í‚Å–¡•û‚Ì¬ˆ«–‚‚Ì–‚•ûw‚ð‹N“®‚Å‚«‚éB<br>
-–‘Ì—Í‹zŽû‚ÍAuŒŒv‚ðŽæ‚Á‚½Žž‚É‰ñ•œ‚·‚éB<br>
+ï¼Šå…±æœ‰ã¯ãƒãƒ¼ãƒ æˆ¦ã§å‘³æ–¹ã®å°æ‚ªé­”ã®é­”æ–¹é™£ã‚’èµ·å‹•ã§ãã‚‹ã€‚<br>
+ï¼Šä½“åŠ›å¸åŽã¯ã€ã€Œè¡€ã€ã‚’å–ã£ãŸæ™‚ã«å›žå¾©ã™ã‚‹ã€‚<br>
 
 </b>
 </table>
 <br><br>
-<font size=2><center><a href="top.html">ƒgƒbƒv‚Ö</a></center></font>
+<font size=2><center><a href="top.html">ãƒˆãƒƒãƒ—ã¸</a></center></font>
 
 
 <font size=2 >
 <div align="right">
 <hr>
-ƒvƒƒOƒ‰ƒ€–{‘ÌAƒCƒ[ƒWƒf[ƒ^Aƒ}ƒjƒ…ƒAƒ‹“™‚Ì’˜ìŒ ‚Í»ìŽÒ‚j‚–‚k‚v‚É‚ ‚è‚Ü‚·B<br>
+ãƒ—ãƒ­ã‚°ãƒ©ãƒ æœ¬ä½“ã€ã‚¤ãƒ¡ãƒ¼ã‚¸ãƒ‡ãƒ¼ã‚¿ã€ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ç­‰ã®è‘—ä½œæ¨©ã¯è£½ä½œè€…ï¼«ï½–ï¼¬ï¼·ã«ã‚ã‚Šã¾ã™ã€‚<br>
 </font>
 </div>
 </font>
