--- a/html/aopchara_patchouli.html
+++ b/html/aopchara_patchouli.html
@@ -11,12 +11,13 @@ body {
 -->
 </style>
 
-	<title>ƒpƒ`ƒ…ƒŠ -‚Ü‚Ê‚ ‚é-</title>
+	<title>ãƒ‘ãƒãƒ¥ãƒª -ã¾ã¬ã‚ã‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
 
-<center><font size=6><b>@@ƒpƒ`ƒ…ƒŠ</b></font><font size="2">@@"PATCHOULI" a little war in bland-old library</font></center>
+<center><font size=6><b>ã€€ã€€ãƒ‘ãƒãƒ¥ãƒª</b></font><font size="2">ã€€ã€€"PATCHOULI" a little war in bland-old library</font></center>
 <hr>
 
 
@@ -24,62 +25,62 @@ body {
 
 <table border=0 align="center" style="font-size: 11pt">
 <tr><th bgcolor="#ffa0a0" width="400">
-ƒpƒ`ƒ…ƒŠ[@ƒm[ƒŒƒbƒW
+ãƒ‘ãƒãƒ¥ãƒªãƒ¼ã€€ãƒŽãƒ¼ãƒ¬ãƒƒã‚¸
 <tr>
 <td width="400px" height="380px" style="background-repeat: no-repeat; text-align: right; vertical-align: bottom" background="pl_patchouliA.jpg">
-<font size="7" color="#696969"><b>ƒpƒ`ƒ…ƒŠ[</b></font>
+<font size="7" color="#696969"><b>ãƒ‘ãƒãƒ¥ãƒªãƒ¼</b></font>
 <table border="1" style="font-size: 11pt; font-weight: bold;">
-<tr><td bgcolor="#c0c0ff">•„‚`‚P<td>ƒvƒŠƒ“ƒZƒXƒEƒ“ƒfƒBƒli’·‰Ÿ‚µEƒ_ƒbƒVƒ…j
-<tr><td bgcolor="#c0c0ff">•„‚`‚Q<td>ƒhƒˆ[ƒXƒsƒAiƒ_ƒbƒVƒ…j
-<tr><td bgcolor="#c0ffc0">•„‚a‚P<td>ƒXƒvƒŠƒ“ƒOƒEƒBƒ“ƒhi‰“‹ßE‚R’ij
-<tr><td bgcolor="#c0ffc0">•„‚a‚Q<td>ƒWƒ“ƒWƒƒƒKƒXƒg
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚`<td>ƒTƒCƒŒƒ“ƒgƒZƒŒƒi
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚a<td>ƒƒCƒ„ƒ‹ƒtƒŒƒAi’·‰Ÿ‚µj
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚b<td>Œ«ŽÒ‚ÌÎ
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚b<td>ƒƒCƒ„ƒ‹ƒ_ƒCƒ„ƒ‚ƒ“ƒhƒŠƒ“ƒO
-<tr><td bgcolor="#ffa0a0">‚kƒXƒyƒ‹<td>Žµ—j
-<tr><td bgcolor="#ffc0ff">Œ‹ŠE<td>Œ«ŽÒ‚Ì»
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼‘<td>ãƒ—ãƒªãƒ³ã‚»ã‚¹ã‚¦ãƒ³ãƒ‡ã‚£ãƒï¼ˆé•·æŠ¼ã—ãƒ»ãƒ€ãƒƒã‚·ãƒ¥ï¼‰
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼’<td>ãƒ‰ãƒ¨ãƒ¼ã‚¹ãƒ”ã‚¢ï¼ˆãƒ€ãƒƒã‚·ãƒ¥ï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼‘<td>ã‚¹ãƒ—ãƒªãƒ³ã‚°ã‚¦ã‚£ãƒ³ãƒ‰ï¼ˆé è¿‘ãƒ»ï¼“æ®µï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼’<td>ã‚¸ãƒ³ã‚¸ãƒ£ã‚¬ã‚¹ãƒˆ
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¡<td>ã‚µã‚¤ãƒ¬ãƒ³ãƒˆã‚»ãƒ¬ãƒŠ
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¢<td>ãƒ­ã‚¤ãƒ¤ãƒ«ãƒ•ãƒ¬ã‚¢ï¼ˆé•·æŠ¼ã—ï¼‰
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼£<td>è³¢è€…ã®çŸ³
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼£<td>ãƒ­ã‚¤ãƒ¤ãƒ«ãƒ€ã‚¤ãƒ¤ãƒ¢ãƒ³ãƒ‰ãƒªãƒ³ã‚°
+<tr><td bgcolor="#ffa0a0">ï¼¬ã‚¹ãƒšãƒ«<td>ä¸ƒæ›œ
+<tr><td bgcolor="#ffc0ff">çµç•Œ<td>è³¢è€…ã®ç ‚
 </table>
 </tr>
 <tr><td>
-g–‚ŠÙ‚ÉZ‚Þ–‚—B<br>
-“úŒŽ‰Î…–Ø‹à“y‚ð‘€‚éAˆêTŠÔ­—B<br>
-—lX‚Èƒ^ƒCƒv‚ÌUŒ‚‚ðŽ‚ÂƒI[ƒ‹ƒ‰ƒEƒ“ƒ_[B<br>
+ç´…é­”é¤¨ã«ä½ã‚€é­”å¥³ã€‚<br>
+æ—¥æœˆç«æ°´æœ¨é‡‘åœŸã‚’æ“ã‚‹ã€ä¸€é€±é–“å°‘å¥³ã€‚<br>
+æ§˜ã€…ãªã‚¿ã‚¤ãƒ—ã®æ”»æ’ƒã‚’æŒã¤ã‚ªãƒ¼ãƒ«ãƒ©ã‚¦ãƒ³ãƒ€ãƒ¼ã€‚<br>
 <br>
 <table width="400" border="1" bgcolor="#ffffff" style="font-size: 10pt">
-<tr><th colspan="3">•Šíà–¾
-<tr><td>‚oƒEƒ“ƒfƒBƒl<td>Œõ’e<td>’·‰Ÿ‚µ‚Å‚U˜A”­‚R‚v‚`‚x‚É•Ï‰»‚·‚é<br>
-ƒ_ƒbƒVƒ…’†‚É“ü—Í‚·‚é‚±‚Æ‚ÅƒI[ƒ^ƒ€ƒGƒbƒW‚É•Ï‰»
-<tr><td>ƒI[ƒ^ƒ€ƒGƒbƒW<td>Œõ’e<td>ŠÑ’Ê’e
-<tr><td>ƒhƒˆ[ƒXƒsƒA<td>ŽÀ’e<td>”j—ô‚µŽ‘±“I‚Éƒ_ƒ[ƒW‚ð—^‚¦‚é<br>
-ƒ_ƒbƒVƒ…’†‚É“ü—Í‚·‚é‚±‚Æ‚ÅƒAƒOƒjƒVƒƒƒCƒ“‚É•Ï‰»
-<tr><td>ƒAƒOƒjƒVƒƒƒCƒ“<td>ŽÀ’e<td>—U“±’e
-<tr><td>‚rƒEƒBƒ“ƒh<td>ŽÀ’e<td>‹ßÚB˜A‘±“ü—Í‚Å‚R‰ñ‚Ü‚Å˜AŒ‚‚·‚é<br>
-‰“‹——£‚Å‚ÍAŒõ’e‚Ì’†‹——£UŒ‚‚É•Ï‰»‚·‚é
-<tr><td>ƒWƒ“ƒWƒƒƒKƒXƒg<td>ŽÀ’e<td>“ËiUŒ‚B
-<tr><td>‚rƒZƒŒƒi<td>ŽÀ’e<td>‰~Žü•”‚É‚o—ÍƒuƒŒ[ƒh
-<tr><td>ƒƒCƒ„ƒ‹ƒtƒŒƒA<td>ŽÀ’e<td>’´L”ÍˆÍUŒ‚B<br>
-’·‰Ÿ‚µ‚Å•„—Í‚ðÁ”ï‚µ‚ÄŽ‘±‚³‚¹‚é‚±‚Æ‚ª‚Å‚«‚é
-<tr><td>Œ«ŽÒ‚ÌÎ<td>ŽÀ’e<td>‚»‚ê‚¼‚ê‚Ì‘®«‚É‘Î‰ž‚·‚éŠî–{•Ší‚ðŽg‚¤‚Æ”­“®<br>
-‚r‚ÅˆÊ’u•Ï‰»
-<tr><td>‚qD‚cƒŠƒ“ƒO<td>ŽÀ’e<td>“G‘_‚¢‚Ì‚o—ÍƒŒ[ƒU[<br>
-ƒŠƒ“ƒO‚ÉG‚ê‚½“G‚ðƒƒbƒN‚·‚éB<br>
-<tr><td>Žµ—j<td>Œõ’e<td>’·ŽžŠÔŒ‹ŠE‚ð••‚¶AŽx‰‡UŒ‚‚ðs‚¤<br>
-’†‰›‚ÍŽÀ’e
-<tr><td>Œ«ŽÒ‚Ì»<td>Œõ’e<td>‚»‚ê‚¼‚ê‚Ì‘®«‚É‘Î‰ž‚·‚éŠî–{•Ší‚ðŽg‚¤‚Æ”­“®<br>
+<tr><th colspan="3">æ­¦å™¨èª¬æ˜Ž
+<tr><td>ï¼°ã‚¦ãƒ³ãƒ‡ã‚£ãƒ<td>å…‰å¼¾<td>é•·æŠ¼ã—ã§ï¼–é€£ç™ºï¼“ï¼·ï¼¡ï¼¹ã«å¤‰åŒ–ã™ã‚‹<br>
+ãƒ€ãƒƒã‚·ãƒ¥ä¸­ã«å…¥åŠ›ã™ã‚‹ã“ã¨ã§ã‚ªãƒ¼ã‚¿ãƒ ã‚¨ãƒƒã‚¸ã«å¤‰åŒ–
+<tr><td>ã‚ªãƒ¼ã‚¿ãƒ ã‚¨ãƒƒã‚¸<td>å…‰å¼¾<td>è²«é€šå¼¾
+<tr><td>ãƒ‰ãƒ¨ãƒ¼ã‚¹ãƒ”ã‚¢<td>å®Ÿå¼¾<td>ç ´è£‚ã—æŒç¶šçš„ã«ãƒ€ãƒ¡ãƒ¼ã‚¸ã‚’ä¸Žãˆã‚‹<br>
+ãƒ€ãƒƒã‚·ãƒ¥ä¸­ã«å…¥åŠ›ã™ã‚‹ã“ã¨ã§ã‚¢ã‚°ãƒ‹ã‚·ãƒ£ã‚¤ãƒ³ã«å¤‰åŒ–
+<tr><td>ã‚¢ã‚°ãƒ‹ã‚·ãƒ£ã‚¤ãƒ³<td>å®Ÿå¼¾<td>èª˜å°Žå¼¾
+<tr><td>ï¼³ã‚¦ã‚£ãƒ³ãƒ‰<td>å®Ÿå¼¾<td>è¿‘æŽ¥ã€‚é€£ç¶šå…¥åŠ›ã§ï¼“å›žã¾ã§é€£æ’ƒã™ã‚‹<br>
+é è·é›¢ã§ã¯ã€å…‰å¼¾ã®ä¸­è·é›¢æ”»æ’ƒã«å¤‰åŒ–ã™ã‚‹
+<tr><td>ã‚¸ãƒ³ã‚¸ãƒ£ã‚¬ã‚¹ãƒˆ<td>å®Ÿå¼¾<td>çªé€²æ”»æ’ƒã€‚
+<tr><td>ï¼³ã‚»ãƒ¬ãƒŠ<td>å®Ÿå¼¾<td>å††å‘¨éƒ¨ã«é«˜å‡ºåŠ›ãƒ–ãƒ¬ãƒ¼ãƒ‰
+<tr><td>ãƒ­ã‚¤ãƒ¤ãƒ«ãƒ•ãƒ¬ã‚¢<td>å®Ÿå¼¾<td>è¶…åºƒç¯„å›²æ”»æ’ƒã€‚<br>
+é•·æŠ¼ã—ã§ç¬¦åŠ›ã‚’æ¶ˆè²»ã—ã¦æŒç¶šã•ã›ã‚‹ã“ã¨ãŒã§ãã‚‹
+<tr><td>è³¢è€…ã®çŸ³<td>å®Ÿå¼¾<td>ãã‚Œãžã‚Œã®å±žæ€§ã«å¯¾å¿œã™ã‚‹åŸºæœ¬æ­¦å™¨ã‚’ä½¿ã†ã¨ç™ºå‹•<br>
+ï¼³ã§ä½ç½®å¤‰åŒ–
+<tr><td>ï¼²ï¼Žï¼¤ãƒªãƒ³ã‚°<td>å®Ÿå¼¾<td>æ•µç‹™ã„ã®é«˜å‡ºåŠ›ãƒ¬ãƒ¼ã‚¶ãƒ¼<br>
+ãƒªãƒ³ã‚°ã«è§¦ã‚ŒãŸæ•µã‚’ãƒ­ãƒƒã‚¯ã™ã‚‹ã€‚<br>
+<tr><td>ä¸ƒæ›œ<td>å…‰å¼¾<td>é•·æ™‚é–“çµç•Œã‚’å°ã˜ã€æ”¯æ´æ”»æ’ƒã‚’è¡Œã†<br>
+ä¸­å¤®ã¯å®Ÿå¼¾
+<tr><td>è³¢è€…ã®ç ‚<td>å…‰å¼¾<td>ãã‚Œãžã‚Œã®å±žæ€§ã«å¯¾å¿œã™ã‚‹åŸºæœ¬æ­¦å™¨ã‚’ä½¿ã†ã¨ç™ºå‹•<br>
 </table>
 
 
 </b>
 </table>
 <br><br>
-<font size=2><center><a href="top.html">ƒgƒbƒv‚Ö</a></center></font>
+<font size=2><center><a href="top.html">ãƒˆãƒƒãƒ—ã¸</a></center></font>
 
 
 <font size=2 >
 <div align="right">
 <hr>
-ƒvƒƒOƒ‰ƒ€–{‘ÌAƒCƒ[ƒWƒf[ƒ^Aƒ}ƒjƒ…ƒAƒ‹“™‚Ì’˜ìŒ ‚Í»ìŽÒ‚j‚–‚k‚v‚É‚ ‚è‚Ü‚·B<br>
+ãƒ—ãƒ­ã‚°ãƒ©ãƒ æœ¬ä½“ã€ã‚¤ãƒ¡ãƒ¼ã‚¸ãƒ‡ãƒ¼ã‚¿ã€ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ç­‰ã®è‘—ä½œæ¨©ã¯è£½ä½œè€…ï¼«ï½–ï¼¬ï¼·ã«ã‚ã‚Šã¾ã™ã€‚<br>
 </font>
 </div>
 </font>
