--- a/html/aopchara_sls.html
+++ b/html/aopchara_sls.html
@@ -11,12 +11,13 @@ body {
 -->
 </style>
 
-	<title>ƒpƒ`ƒ…ƒŠ -‚Ü‚Ê‚ ‚é-</title>
+	<title>ãƒ‘ãƒãƒ¥ãƒª -ã¾ã¬ã‚ã‚‹-</title>
+	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
 
-<center><font size=6><b>@@ƒpƒ`ƒ…ƒŠ</b></font><font size="2">@@"PATCHOULI" a little war in bland-old library</font></center>
+<center><font size=6><b>ã€€ã€€ãƒ‘ãƒãƒ¥ãƒª</b></font><font size="2">ã€€ã€€"PATCHOULI" a little war in bland-old library</font></center>
 <hr>
 
 
@@ -24,78 +25,78 @@ body {
 
 <table border=0 align="center" style="font-size: 11pt">
 <tr><th bgcolor="#ffffff" width="400">
-ƒTƒj[ƒ~ƒ‹ƒN•ƒ‹ƒiƒ`ƒƒƒCƒ‹ƒh•ƒXƒ^[ƒTƒtƒ@ƒCƒA
+ã‚µãƒ‹ãƒ¼ãƒŸãƒ«ã‚¯ï¼†ãƒ«ãƒŠãƒãƒ£ã‚¤ãƒ«ãƒ‰ï¼†ã‚¹ã‚¿ãƒ¼ã‚µãƒ•ã‚¡ã‚¤ã‚¢
 <tr>
 <td width="400px" height="380px" style="background-repeat: no-repeat; text-align: right; vertical-align: bottom" background="pl_slsA.jpg">
-<font size="7" color="#696969"><b>ŽOŒŽ¸</b></font>
+<font size="7" color="#696969"><b>ä¸‰æœˆç²¾</b></font>
 <table border="1" style="font-size: 11pt; font-weight: bold;">
-<tr><td bgcolor="#c0c0ff">•„‚`‚P<td>Œõ‚Ì‚R—d¸i’·‰Ÿ‚µj
-<tr><td bgcolor="#c0c0ff">•„‚`‚Q<td>—d¸ŠCípi’·‰Ÿ‚µj
-<tr><td bgcolor="#c0ffc0">•„‚a‚P<td>—d¸ˆê‚Ì‚±‚»“D’ci‰B“Ùj
-<tr><td bgcolor="#c0ffc0">•„‚a‚Q<td>‹•¨ŠïºˆÐ¨I
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚`<td>¯‚Ì’¹‹
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚a<td>t‚ÌŒ¶
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚b<td>ê^‘Ö‚¦
-<tr><td bgcolor="#ffa0a0">ƒXƒyƒ‹‚c<td>”~‰J–¾‚¯‚Ì^ŽÀ
-<tr><td bgcolor="#ffa0a0">‚kƒXƒyƒ‹<td>o‰ï‚¢
-<tr><td bgcolor="#ffc0ff">Œ‹ŠE<td>’Æ‚Ì’Ó
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼‘<td>å…‰ã®ï¼“å¦–ç²¾ï¼ˆé•·æŠ¼ã—ï¼‰
+<tr><td bgcolor="#c0c0ff">ç¬¦ï¼¡ï¼’<td>å¦–ç²¾æµ·æˆ¦è¡“ï¼ˆé•·æŠ¼ã—ï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼‘<td>å¦–ç²¾ä¸€ã®ã“ãæ³¥å›£ï¼ˆéš éï¼‰
+<tr><td bgcolor="#c0ffc0">ç¬¦ï¼¢ï¼’<td>è™šå‹¢å¥‡å£°å¨å‹¢ï¼
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¡<td>æ˜Ÿã®é³¥å±…
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¢<td>æ˜¥ã®å¹»
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼£<td>é·½æ›¿ãˆ
+<tr><td bgcolor="#ffa0a0">ã‚¹ãƒšãƒ«ï¼¤<td>æ¢…é›¨æ˜Žã‘ã®çœŸå®Ÿ
+<tr><td bgcolor="#ffa0a0">ï¼¬ã‚¹ãƒšãƒ«<td>å‡ºä¼šã„
+<tr><td bgcolor="#ffc0ff">çµç•Œ<td>æ§Œã®è”¦
 </table>
 </tr>
 <tr><td>
-X‚Ì‘å–Ø‚ÉZ‚ñ‚Å‚¢‚éAˆ«‹YD‚«‚Ì—d¸B<br>
-l‚ð–À‚í‚¹‚Ä—V‚ñ‚Å‚¢‚é‚ªAÅ‹ß‚ÍŒ©‚Â‚©‚Á‚Ä‚Î‚©‚èB<br>‚Æ‚¢‚¤‚©A‚ ‚Ü‚èˆ«‹Y‚µ‚Ä‚È‚¢B<br>
-Šy‚µ‚¯‚ê‚Î‰½‚Å‚à‚¢‚¢‚Ý‚½‚¢B<br>
-‚Rl‚Å‚à”¼l‘O‚¾‚ªA‚Rl‚¢‚é‚Ì‚Å‚¢‚ë‚¢‚ë‚Æ“ÁŽê”\—Í‚ðŽ‚ÂB<br>
+æ£®ã®å¤§æœ¨ã«ä½ã‚“ã§ã„ã‚‹ã€æ‚ªæˆ¯å¥½ãã®å¦–ç²¾ã€‚<br>
+äººã‚’è¿·ã‚ã›ã¦éŠã‚“ã§ã„ã‚‹ãŒã€æœ€è¿‘ã¯è¦‹ã¤ã‹ã£ã¦ã°ã‹ã‚Šã€‚<br>ã¨ã„ã†ã‹ã€ã‚ã¾ã‚Šæ‚ªæˆ¯ã—ã¦ãªã„ã€‚<br>
+æ¥½ã—ã‘ã‚Œã°ä½•ã§ã‚‚ã„ã„ã¿ãŸã„ã€‚<br>
+ï¼“äººã§ã‚‚åŠäººå‰ã ãŒã€ï¼“äººã„ã‚‹ã®ã§ã„ã‚ã„ã‚ã¨ç‰¹æ®Šèƒ½åŠ›ã‚’æŒã¤ã€‚<br>
 <br>
 <table width="400" border="1" bgcolor="#ffffff" style="font-size: 10pt">
-<tr><th colspan="3">•Šíà–¾
-<tr><td>Œõ‚Ì‚R—d¸<td><td>ƒTƒj[‚Í”½ŽËŽx‰‡’e<br>
-ƒ‹ƒi‚Í”½ŽËŽÀ’e<br>
-ƒXƒ^[‚Í—U“±Œõ’e‚ð•ú‚Â<br>
-’·‰Ÿ‚µ‚Å•s‰ÂŽ‹”½ŽË—U“±’e<br>
-<tr><td>—d¸ŠCíp<td>Œõ’e<td>ƒUƒR—d¸‚ðŒÄ‚Ño‚·<br>
-’·‰Ÿ‚µ‚Å•Ò‘à‚ð‘g‚Þ
-<tr><td>—d¸ˆê‚Ì‚±‚»“D’c<td><td>Žp‚ðÁ‚µAƒ^[ƒQƒbƒg‚ðŠO‚·<br>
-ˆÚ“®ˆÈŠO‚Ìs“®‚ð‚·‚é‚Æ‰ðœ‚³‚ê‚é<br>
-Šù‚É‰B‚ê‚Ä‚¢‚½ê‡A‚»‚ë‚»‚ë‚É•Ï‰»
-<tr><td>‚»‚ë‚»‚ë<td>ŽÀ’e<td>Žp‚ðŒ»‚µA‹ß‚­‚É‚¢‚é“G‚ð‚Ñ‚Á‚­‚è‚³‚¹‚é<br>
-<tr><td>‹•¨ŠïºˆÐ¨I<td>ŽÀ’e<td>“ËiUŒ‚<br>
-‘€ì—d¸‚ðØ‚è‘Ö‚¦‚é
-<tr><td>¯‚Ì’¹‹<td>ŽÀ’e<td>è¦Î‚ª~‚Á‚Ä‚­‚é<br>
-<tr><td>t‚ÌŒ¶<td><td>ƒŠƒŠ[ƒzƒƒCƒg‚ªt‚ð“`‚¦‚É—ˆ‚é<br>
-<tr><td>ê^‘Ö‚¦<td>ŽÀ’e<td>ê^‚ª‚â‚Á‚Ä‚­‚é<br>
-ê^‚Ì”‚Í•„—Í‚É‚æ‚é
-<tr><td>”~‰J–¾‚¯‚Ì^ŽÀ<td>ŽÀ’e<td>Œ©‚¦‚È‚¢‰J‚ª~‚é<br>
-‚½‚Ü‚É—‹iŽÀ’ej‚à~‚é
-<tr><td>o‰ï‚¢<td><td>ƒ‰ƒ“ƒ_ƒ€‚Él‚ªŽñ‚ð‚Â‚Á‚±‚Þ<br>
-—Lî‚Ì–¶‰JF–‚—¹‚ªƒ}ƒXƒ^[ƒXƒp[ƒN‚ð•ú‚Â<br>
-–‚–@Žg‚¢‚Æ‰RFƒAƒŠƒX‚ªlŒ`‚ð‚Î‚ç‚Ü‚­<br>
-‚‘‚Ì“eF—éå‚ª‘ŠŽè‚ð˜f‚í‚¹‚é<br>
-ˆÙ•Ï‚ÌŒü‚±‚¤F¬’¬‚ªƒTƒ{‚é
-<tr><td>’Æ‚Ì’Ó<td><td>‚Rl‚ðŒ‹‚Ô‚RŠpŒ`‚É’Ó‚ð’£‚é
+<tr><th colspan="3">æ­¦å™¨èª¬æ˜Ž
+<tr><td>å…‰ã®ï¼“å¦–ç²¾<td><td>ã‚µãƒ‹ãƒ¼ã¯åå°„æ”¯æ´å¼¾<br>
+ãƒ«ãƒŠã¯åå°„å®Ÿå¼¾<br>
+ã‚¹ã‚¿ãƒ¼ã¯èª˜å°Žå…‰å¼¾ã‚’æ”¾ã¤<br>
+é•·æŠ¼ã—ã§ä¸å¯è¦–åå°„èª˜å°Žå¼¾<br>
+<tr><td>å¦–ç²¾æµ·æˆ¦è¡“<td>å…‰å¼¾<td>ã‚¶ã‚³å¦–ç²¾ã‚’å‘¼ã³å‡ºã™<br>
+é•·æŠ¼ã—ã§ç·¨éšŠã‚’çµ„ã‚€
+<tr><td>å¦–ç²¾ä¸€ã®ã“ãæ³¥å›£<td><td>å§¿ã‚’æ¶ˆã—ã€ã‚¿ãƒ¼ã‚²ãƒƒãƒˆã‚’å¤–ã™<br>
+ç§»å‹•ä»¥å¤–ã®è¡Œå‹•ã‚’ã™ã‚‹ã¨è§£é™¤ã•ã‚Œã‚‹<br>
+æ—¢ã«éš ã‚Œã¦ã„ãŸå ´åˆã€ãã‚ãã‚ã«å¤‰åŒ–
+<tr><td>ãã‚ãã‚<td>å®Ÿå¼¾<td>å§¿ã‚’ç¾ã—ã€è¿‘ãã«ã„ã‚‹æ•µã‚’ã³ã£ãã‚Šã•ã›ã‚‹<br>
+<tr><td>è™šå‹¢å¥‡å£°å¨å‹¢ï¼<td>å®Ÿå¼¾<td>çªé€²æ”»æ’ƒ<br>
+æ“ä½œå¦–ç²¾ã‚’åˆ‡ã‚Šæ›¿ãˆã‚‹
+<tr><td>æ˜Ÿã®é³¥å±…<td>å®Ÿå¼¾<td>éš•çŸ³ãŒé™ã£ã¦ãã‚‹<br>
+<tr><td>æ˜¥ã®å¹»<td><td>ãƒªãƒªãƒ¼ãƒ›ãƒ¯ã‚¤ãƒˆãŒæ˜¥ã‚’ä¼ãˆã«æ¥ã‚‹<br>
+<tr><td>é·½æ›¿ãˆ<td>å®Ÿå¼¾<td>é·½ãŒã‚„ã£ã¦ãã‚‹<br>
+é·½ã®æ•°ã¯ç¬¦åŠ›ã«ã‚ˆã‚‹
+<tr><td>æ¢…é›¨æ˜Žã‘ã®çœŸå®Ÿ<td>å®Ÿå¼¾<td>è¦‹ãˆãªã„é›¨ãŒé™ã‚‹<br>
+ãŸã¾ã«é›·ï¼ˆå®Ÿå¼¾ï¼‰ã‚‚é™ã‚‹
+<tr><td>å‡ºä¼šã„<td><td>ãƒ©ãƒ³ãƒ€ãƒ ã«äººãŒé¦–ã‚’ã¤ã£ã“ã‚€<br>
+æœ‰æƒ…ã®éœ§é›¨ï¼šé­”ç†æ²™ãŒãƒžã‚¹ã‚¿ãƒ¼ã‚¹ãƒ‘ãƒ¼ã‚¯ã‚’æ”¾ã¤<br>
+é­”æ³•ä½¿ã„ã¨å˜˜ï¼šã‚¢ãƒªã‚¹ãŒäººå½¢ã‚’ã°ã‚‰ã¾ã<br>
+é«˜è‰ã®å…Žï¼šéˆ´ä»™ãŒç›¸æ‰‹ã‚’æƒ‘ã‚ã›ã‚‹<br>
+ç•°å¤‰ã®å‘ã“ã†ï¼šå°ç”ºãŒã‚µãƒœã‚‹
+<tr><td>æ§Œã®è”¦<td><td>ï¼“äººã‚’çµã¶ï¼“è§’å½¢ã«è”¦ã‚’å¼µã‚‹
 </table>
 <br>
-“ÁŽêƒ{ƒ^ƒ“‚ð‘f‘‚­“ñ‰ñ‰Ÿ‚·‚±‚Æ‚ÅAƒƒCƒ“‘€ìƒLƒƒƒ‰‚ð“ü‚ê‘Ö‚¦‚é<br><br>
-–“ÁŽê”\—Í<br>
-Eˆêl‚ ‚½‚è‚Ì”Mã¸—Ê‚ª’á‚¢iƒOƒŒƒCƒYEƒ_ƒbƒVƒ…j<br>
-Eƒ_ƒ[ƒW”¼Œ¸iØ‚èã‚°j<br>
-EŽ©‹@”í’e’†‚à•Ê‚Ì—d¸‚Ís“®‰Â”\<br>
-E”í’e’†As“®’†‚Å‚àƒXƒyƒ‹”­“®‰Â”\<br>
-EƒXƒyƒ‹‚ª‘¼‚Ìs“®‚É‰e‹¿‚µ‚È‚¢<br>
-EƒXƒyƒ‹‚Ì–³“GŽžŠÔ‚ª–³‚¢<br>
-EŒˆŽ€Œ‹ŠEÁ”ï—Ê‚ª’á‚¢<br>
-EŒ‹ŠE‚É’eÁ‚µŒø‰Ê‚È‚µ<br>
+ç‰¹æ®Šãƒœã‚¿ãƒ³ã‚’ç´ æ—©ãäºŒå›žæŠ¼ã™ã“ã¨ã§ã€ãƒ¡ã‚¤ãƒ³æ“ä½œã‚­ãƒ£ãƒ©ã‚’å…¥ã‚Œæ›¿ãˆã‚‹<br><br>
+ï¼Šç‰¹æ®Šèƒ½åŠ›<br>
+ãƒ»ä¸€äººã‚ãŸã‚Šã®ç†±ä¸Šæ˜‡é‡ãŒä½Žã„ï¼ˆã‚°ãƒ¬ã‚¤ã‚ºãƒ»ãƒ€ãƒƒã‚·ãƒ¥ï¼‰<br>
+ãƒ»ãƒ€ãƒ¡ãƒ¼ã‚¸åŠæ¸›ï¼ˆåˆ‡ã‚Šä¸Šã’ï¼‰<br>
+ãƒ»è‡ªæ©Ÿè¢«å¼¾ä¸­ã‚‚åˆ¥ã®å¦–ç²¾ã¯è¡Œå‹•å¯èƒ½<br>
+ãƒ»è¢«å¼¾ä¸­ã€è¡Œå‹•ä¸­ã§ã‚‚ã‚¹ãƒšãƒ«ç™ºå‹•å¯èƒ½<br>
+ãƒ»ã‚¹ãƒšãƒ«ãŒä»–ã®è¡Œå‹•ã«å½±éŸ¿ã—ãªã„<br>
+ãƒ»ã‚¹ãƒšãƒ«ã®ç„¡æ•µæ™‚é–“ãŒç„¡ã„<br>
+ãƒ»æ±ºæ­»çµç•Œæ¶ˆè²»é‡ãŒä½Žã„<br>
+ãƒ»çµç•Œã«å¼¾æ¶ˆã—åŠ¹æžœãªã—<br>
 
 </b>
 </table>
 <br><br>
-<font size=2><center><a href="top.html">ƒgƒbƒv‚Ö</a></center></font>
+<font size=2><center><a href="top.html">ãƒˆãƒƒãƒ—ã¸</a></center></font>
 
 
 <font size=2 >
 <div align="right">
 <hr>
-ƒvƒƒOƒ‰ƒ€–{‘ÌAƒCƒ[ƒWƒf[ƒ^Aƒ}ƒjƒ…ƒAƒ‹“™‚Ì’˜ìŒ ‚Í»ìŽÒ‚j‚–‚k‚v‚É‚ ‚è‚Ü‚·B<br>
+ãƒ—ãƒ­ã‚°ãƒ©ãƒ æœ¬ä½“ã€ã‚¤ãƒ¡ãƒ¼ã‚¸ãƒ‡ãƒ¼ã‚¿ã€ãƒžãƒ‹ãƒ¥ã‚¢ãƒ«ç­‰ã®è‘—ä½œæ¨©ã¯è£½ä½œè€…ï¼«ï½–ï¼¬ï¼·ã«ã‚ã‚Šã¾ã™ã€‚<br>
 </font>
 </div>
 </font>
