--- a/html/aopchara_ran.html
+++ b/html/aopchara_ran.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
  <head><style type="text/css">
 <!--
 body {
@@ -12,7 +12,6 @@ body {
 </style>
 
 	<title>パチュリ -まぬある-</title>
-	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
@@ -64,7 +63,7 @@ body {
 上空の敵に散弾を浴びせる<br>
 <tr><td>神将・招杜羅<td>実弾<td>神将タイプＢ。<br>
 爆風を発し、敵を弾き飛ばす<br>
-<tr><td>神将・頞儞羅<td>実弾<td>神将タイプＢホールド。<br>
+<tr><td>神将・??羅<td>実弾<td>神将タイプＢホールド。<br>
 近くの敵に寄って行く機雷<br>
 <tr><td>神将・安底羅<td>実弾<td>神将タイプＢダッシュ。<br>
 敵を長時間動けなくする<br>
