--- a/html/aopchara_koakuma.html
+++ b/html/aopchara_koakuma.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
  <head><style type="text/css">
 <!--
 body {
@@ -12,7 +12,6 @@ body {
 </style>
 
 	<title>パチュリ -まぬある-</title>
-	<meta charset="UTF-8">
  </head>
 
 <body text="#40a040" link="#0000ff" vlink="#ff4444" alink="#ffd700">
