--- a/html/top.html
+++ b/html/top.html
@@ -58,7 +58,7 @@ body {
 <center><a href="top.html" target="topframe">１．とっぷ</a>
 <a href="story.html" target="topframe">２．ぷれすとり</a>
 <a href="chara.html" target="topframe">３．きゃらくたー</a>
-<a href="controll.html" target="topframe">４．操作方法</a>
+<a href="control.html" target="topframe">４．操作方法</a>
 <a href="rule.html" target="topframe">５．しすてむ</a>
 <a href="aoprule.html" target="topframe">６．あくせる</a>
 <a href="title.html" target="topframe">７．たいとる画面</a>
