--- a/html/menu.html
+++ b/html/menu.html
@@ -16,7 +16,7 @@ body {
 <center><a href="top.html" target="topframe">１．とっぷ</a><br>
 <a href="story.html" target="topframe">２．ぷれすとり</a><br>
 <a href="chara.html" target="topframe">３．きゃらくたー</a><br>
-<a href="controll.html" target="topframe">４．操作方法</a><br>
+<a href="control.html" target="topframe">４．操作方法</a><br>
 <a href="rule.html" target="topframe">５．しすてむ</a><br>
 <a href="aoprule.html" target="topframe">６．あくせる</a><br>
 <a href="title.html" target="topframe">７．たいとる画面</a><br>
